# python-web-dashboard

./: README.md  app.py  eda.py  pyproject.toml  settings.json
